--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -15,27 +15,33 @@
 
     h3 {
       color: #333;
-      font-size: 25px;
+      font-size: 5vw;
     }
 
     h2 {
       color: #333;
-      margin-top: 30px;
+      margin-top: 1%;
       left: 41.25%;
+      font-size: 2vw;
+    }
+
+    h1 {
+      margin-top: 1%;
+      font-size: 3vw;
     }
 
     .imsa-logo {
       position: fixed;
-      top: 25px;
-      left: 50px;
-      width: 100px;
+      top: 4%;
+      left: 3%;
+      width: 7.5%;
     }
 
     .profile-icon {
       position: fixed;
-      top: 25px;
-      right: 50px; 
-      width: 100px; 
+      top: 4%;
+      right: 3%; 
+      width: 7.5%; 
       cursor: pointer;
     }
 
@@ -122,7 +128,7 @@
       left: 11%;  
       transform-origin: bottom left; 
       letter-spacing: 0.8em; 
-      font-size: 100px; 
+      font-size: 6vw; 
       font-family: 'Mustopha'; 
     }
 
@@ -195,14 +201,15 @@
     }
 
     .red-dot {
-      width: 22px;
-      height: 22px;
+      width: 1.75vw;
+      height: 3.5vh;
       background-color: red;
       border-radius: 100%;
       position: absolute;
-      top: 184px;
-      left: 1422px;
+      top: 24.5%;
+      left: 73.5%;
       z-index: 1000000;
+      font-size: 1vw;
     }
 
   </style>
@@ -210,7 +217,7 @@
   
 <p style="color: green"><%= notice %></p>
 
-<% if current_member&.position != 'Member' %>
+<% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
   <% if Finance.where(status: 0).count > 0 %>
       <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
   <% end %>
@@ -239,9 +246,6 @@
           </li>
           <li class="nav-item">
             <%= link_to 'Events', events_path, class: 'nav-link' %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Finances', finances_path, class: 'nav-link' %>
@@ -299,7 +303,7 @@
 </div>
 
 <h1 class="side-header">IMSA</h1>
-<%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
+<%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
 <% if current_member&.position != 'Pending' %>
   <a href="<%= profile_path %>">
     <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
