--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -12,22 +12,37 @@
         text-align: center;
         margin: 50px;
       }
-      .imsa-logo {
-        position: fixed;
-        top: 25px;
-        left: 50px;
-        width: 100px;
-      }
-      .profile-icon {
-        position: fixed;
-        top: 25px;
-        right: 50px; 
-        width: 100px; 
-        cursor: pointer;
+      
+      h3 {
+        color: #333;
+        font-size: 5vw;
       }
 
       h2 {
         color: #333;
+        margin-top: 1%;
+        left: 41.25%;
+        font-size: 2vw;
+      }
+
+      h1 {
+        margin-top: 1%;
+        font-size: 3vw;
+      }
+
+      .imsa-logo {
+        position: fixed;
+        top: 4%;
+        left: 3%;
+        width: 7.5%;
+      }
+
+      .profile-icon {
+        position: fixed;
+        top: 4%;
+        right: 3%; 
+        width: 7.5%; 
+        cursor: pointer;
       }
 
       p {
@@ -134,7 +149,7 @@
         left: 11%; 
         transform-origin: bottom left; 
         letter-spacing: 0.8em; 
-        font-size: 100px; 
+        font-size: 6vw; 
         font-family: 'Mustopha'; 
       }
 
@@ -205,15 +220,16 @@
   }
 
   .red-dot {
-      width: 22px;
-      height: 22px;
-      background-color: red;
-      border-radius: 100%;
-      position: absolute;
-      top: 175px;
-      left: 1425px;
-      z-index: 1000000;
-    }
+    width: 1.75vw;
+    height: 3.5vh;
+    background-color: red;
+    border-radius: 100%;
+    position: absolute;
+    top: 24.5%;
+    left: 73.5%;
+    z-index: 1000000;
+    font-size: 1vw;
+  }
 </style>
 
 <p style="color: green"><%= notice %></p>
@@ -259,9 +275,6 @@
                     <%= link_to 'Events', events_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
-                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
                     <%= link_to 'Finances', finances_path, class: 'nav-link' %>
                   </li>
                 </ul>
@@ -290,9 +303,6 @@
                   </li>
                   <li class="nav-item">
                     <%= link_to 'Events', events_path, class: 'nav-link' %>
-                  </li>
-                  <li class="nav-item">
-                    <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
                   </li>
                   <li class="nav-item">
                     <%= link_to 'Finances', finances_path, class: 'nav-link' %>
@@ -327,7 +337,7 @@
     <% end %>
 
   <h1 class="side-header">IMSA</h1>
-  <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
   <% if current_member&.position != 'Pending' %>
     <a href="<%= profile_path %>">
       <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
