--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -32,22 +32,35 @@
       margin: 50px;
     }
 
+    h3 {
+      color: #333;
+      font-size: 5vw;
+    }
+
     h2 {
       color: #333;
+      margin-top: 1%;
+      left: 41.25%;
+      font-size: 2vw;
+    }
+
+    h1 {
+      margin-top: 1%;
+      font-size: 3vw;
     }
 
     .imsa-logo {
       position: fixed;
-      top: 25px;
-      left: 50px;
-      width: 100px;
+      top: 4%;
+      left: 3%;
+      width: 7.5%;
     }
 
     .profile-icon {
       position: fixed;
-      top: 25px;
-      right: 50px; 
-      width: 100px; 
+      top: 4%;
+      right: 3%; 
+      width: 7.5%; 
       cursor: pointer;
     }
 
@@ -155,7 +168,7 @@
       left: 11%; 
       transform-origin: bottom left; 
       letter-spacing: 0.8em; 
-      font-size: 100px; 
+      font-size: 6vw; 
       font-family: 'Mustopha'; 
     }
 
@@ -186,14 +199,15 @@
     }
 
     .red-dot {
-      width: 22px;
-      height: 22px;
+      width: 1.75vw;
+      height: 3.5vh;
       background-color: red;
       border-radius: 100%;
       position: absolute;
-      top: 190px;
-      left: 1425px;
+      top: 24.5%;
+      left: 73.5%;
       z-index: 1000000;
+      font-size: 1vw;
     }
 
   </style>
@@ -209,7 +223,6 @@
 
   <% if admin_signed_in? %>
     <% current_member = Member.find_by(email: current_admin.email) %>
-    <br>
     <h1 class = "title">Officers</h1>
     <% if current_member&.position == 'President' %>
       <div class="admin-links">
@@ -230,9 +243,6 @@
               </li>
               <li class="nav-item">
                 <%= link_to 'Events', events_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
                 <%= link_to 'Finances', finances_path, class: 'nav-link' %>
@@ -262,9 +272,6 @@
               <%= link_to 'Events', events_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Attendance', attendances_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
               <%= link_to 'Finances', finances_path, class: 'nav-link' %>
             </li>
           </ul>
@@ -272,9 +279,9 @@
       </nav>
     <% end %>
   <% end %>
-  
+
   <h1 class="side-header">IMSA</h1>
-  <%= image_tag 'imsa_logo.png', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
   <% if current_member&.position != 'Pending' %>
     <a href="<%= profile_path %>">
       <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
