--- a/app/views/finances/show.html.erb
+++ b/app/views/finances/show.html.erb
@@ -71,13 +71,14 @@
       </button>
     <% end %>
 
-    <%= button_to @finance, method: :delete, class: "destroy-finance-form", onclick: "confirmFinanceDelete()",
-    style: "width: 5%; bottom: 50px; right: 100px; position: fixed; background: none; border: none;", 
-    onmouseover: "this.style.transform='scale(1.1)';",
-    onmouseout: "this.style.transform='scale(1)';" do %>
-      <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
-    <% end %>
-  <% end %>  
+    <%= button_to "Delete Finance", @finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" %>
+      <button type="button" onclick="confirmFinanceDelete()" 
+        style="width: 5%; bottom: 50px; right: 100px; position: fixed; background: none; border: none;" 
+        onmouseover="this.style.transform='scale(1.1)';"
+        onmouseout="this.style.transform='scale(1)';">
+        <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+      </button>
+    <% end %>  
 
   <%= link_to finances_path do %>
     <button type="button" style= "width: 5%; border: none; background: none; position: fixed; top: 25px; left: 25px;"
@@ -96,20 +97,29 @@
 </div>
 
 <script>
-function confirmFinanceDelete() {
-  document.getElementById('deleteConfirmationPopup').style.display = 'block';
-}
+  function confirmFinanceDelete() {
+    document.getElementById('deleteConfirmationPopup').style.display = 'block';
+  }
 
-document.addEventListener("DOMContentLoaded", function() {
-  var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
-  var destroyForm = document.querySelector('.destroy-finance-form');
+  document.addEventListener("DOMContentLoaded", function() {
+    var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+    var destroyForm = document.querySelector('.finance-delete-form');
 
-  confirmDeleteBtn.addEventListener('click', function() {
-    destroyForm.submit();
+    confirmDeleteBtn.addEventListener('click', function() {
+      try {
+        if (destroyForm) {
+          console.log(destroyForm);
+          destroyForm.submit();
+        } else {
+          console.error('Delete form not found');
+        }
+      } catch (error) {
+        console.error('Error submitting delete form:', error);
+      }
+    });
   });
-});
 
-function cancelDelete() {
-  document.getElementById('deleteConfirmationPopup').style.display = 'none';
-}
+  function cancelDelete() {
+    document.getElementById('deleteConfirmationPopup').style.display = 'none';
+  }
 </script>
