refactored code and fixed bugs

--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New attendance</h1>
+<header>
+  <title> New Attendance </title>
+</header>
+
+<h1>New Attendance</h1>
 
 <%= render "form", attendance: @attendance %>
 
