--- a/app/views/events/peopleAttending.html.erb
+++ b/app/views/events/peopleAttending.html.erb
@@ -1,4 +1,7 @@
 <!-- app/views/events/peopleAttending.html.erb -->
+<header>
+  <title>Attendance</title>
+</header>
 
 <h1>People Attending <%= @event.title %></h1>
 
