--- a/app/views/finances/show.html.erb
+++ b/app/views/finances/show.html.erb
@@ -1,3 +1,7 @@
+<header>
+  <title>Finance Request Details</title>
+</header>
+
 <style>
   .delete-confirmation-popup {
     display: none;
@@ -11,7 +15,6 @@
     border: 1px solid black;
     z-index: 1000;
   }
-
 
   .confirm-delete-btn, .cancel-delete-btn {
     margin-right: 5px;
@@ -35,11 +38,10 @@
   .image-resizing img {
     max-width: 50%;
   }
-
 </style>
 
 <br>
-<h1>Viewing finance</h1>
+<h1>Viewing Finance Request</h1>
 <br>
 
 <%= render @finance %>
