--- a/app/views/officer_entries/edit.html.erb
+++ b/app/views/officer_entries/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editing officer entry</h1>
+<header>
+  <title>Edit Officer Entry</title>
+</header>
+
+<h1>Editing Officer Entry</h1>
 
 <%= render "form", officer_entry: @officer_entry %>
 
