--- a/app/views/officer_entries/new.html.erb
+++ b/app/views/officer_entries/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New officer entry</h1>
+<header>
+  <title>New Officer Entry</title>
+</header?  
+
+<h1>New Officer Entry</h1>
 
 <%= render "form", officer_entry: @officer_entry %>
 
