--- a/app/views/officer_entries/show.html.erb
+++ b/app/views/officer_entries/show.html.erb
@@ -1,3 +1,7 @@
+<header>
+  <title>Officer Entry Details</title>
+</header>
+
 <p style="color: green"><%= notice %></p>
 
 <%= render @officer_entry %>
