--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -1,3 +1,7 @@
+<header>
+  <title> Edit Attendance </title>
+</header>
+
 <h1>Editing attendance</h1>
 
 <%= render "form", attendance: @attendance %>
