--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Events</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
   <style>
@@ -45,8 +45,12 @@
       cursor: pointer;
     }
 
+    h2 {
+      color: #333;
+    }
+
     p {
-      color: #666;
+      color: #666;åå
     }
 
     a {
@@ -91,37 +95,24 @@
       color: #fff;
     }
 
+    .content {
+      margin-top: 60px; 
+    }
+
     .navbar {
       background-color: #007bff;
       padding: 5px;
       width: 55%;
       margin: auto; 
       margin-top: 5vh;
+      display: flex;
+      align-items: center; 
+      justify-content: space-evenly;
+      z-index: 1000;
     }
 
     .navbar a {
       color: #fff;
-    }
-
-    .header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #007bff;
-      padding: 5px; 
-      color: #fff;
-    }
-
-    .miniheader{
-      margin-left: -60%; 
-    }
-
-    .miniheader1{
-      margin-left: -53%; 
-    }
-
-    .content {
-      margin-top: 60px; 
     }
 
     .navbar .active a {
@@ -141,26 +132,18 @@
     }
     @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
 
+    .miniheader{
+      margin-left: -60%; 
+    }
 
-    .side-header {
-      transform: rotate(270deg);
-      position: fixed;
-      top: 75%; 
-      left: 11%; 
-      transform-origin: bottom left; 
-      letter-spacing: 0.8em; 
-      font-size: 6vw; 
-      font-family: 'Mustopha'; 
+    .miniheader1{
+      margin-left: -53%; 
     }
 
     .floating-button {
       position: fixed;
       bottom: 10%;
       right: 10%;
-    }
-
-    .finances {
-      margin-top: 30px;
     }
 
     .newFinance button{
@@ -177,39 +160,6 @@
 
     .newFinance button:hover{
       background: #ccc;
-    }
-
-    .showFinance button{
-      background-color: #f9f9f9;
-      color: #333;
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .showFinance button:hover{
-      scale: 1.1;
-    }
-
-    .pending-finance-box {
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      padding: 10px;
-      max-width: 500px;
-      margin: auto;
-      background-color: #f9f9f9;
-      margin-bottom: 10px;
-    }
-
-    .completed-finance-box {
-      border: 2px solid #ccc;
-      border-radius: 5px;
-      padding: 10px;
-      max-width: 500px;
-      margin: auto;
-      background-color: #f9f9f9;
-      margin-bottom: 10px;
     }
 
     .pretty-divider {
@@ -230,224 +180,193 @@
       z-index: 1000000;
       font-size: 1vw;
     }
-
   </style>
 </head>
 <body>
-<% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-  <% if Finance.where(status: 0).count > 0 %>
-      <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+
+  <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+    <% if Finance.where(status: 0).count > 0 %>
+        <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
+    <% end %>
   <% end %>
-<% end %>
 
-<% if admin_signed_in? %>
-  <% current_member = Member.find_by(email: current_admin.email) %>
-
-  <% if current_member&.position == 'President' %>
-    <br>
-    <h1>Events</h1>
-    <div class="links">
-      <div class="admin-links">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Members', members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item active">
-                <%= link_to 'Events', events_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
-
-  <% elsif current_member&.position != 'President' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-    <h1>Events</h1>
-    <div class="links">
-      <div class="admin-links">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Members', members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item active">
-                <%= link_to 'Events', events_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
-
-  <% else %>
-    <div class="admin-info">
+  <% if admin_signed_in? %>
+    <% current_member = Member.find_by(email: current_admin.email) %>
+    
+    <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
       <h1>Events</h1>
       <div class="links">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
-          <ul class="navbar-nav">
-            <li class="nav-item" >
-              <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-            </li>
+        <div class="admin-links">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <li class="nav-item active">
-              <%= link_to 'Events', events_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
-            </li>
-          </ul>
-        </nav>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'Members', members_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item active">
+                  <%= link_to 'Events', events_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
-    </div>  
+
+    <% else %>
+      <div class="admin-info">
+        <h1>Events</h1>
+        <div class="links">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light member-navbar">
+            <ul class="navbar-nav">
+              <li class="nav-item" >
+                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+              </li>
+
+              <li class="nav-item active">
+                <%= link_to 'Events', events_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Leaderboard', events_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>  
+    <% end %>
   <% end %>
-<% end %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id="events">
-        <% live_events = [] %>
-        <% upcoming_events = [] %>
-        <% past_events = [] %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="events">
+          <% live_events = [] %>
+          <% upcoming_events = [] %>
+          <% past_events = [] %>
 
-        <% @events.each do |event| %>
-          <% if event.end_time < Time.now %>
-            <% past_events << event %>
-          <% elsif event.start_time < Time.now %>
-            <% live_events << event %>
-          <% else %>
-            <% upcoming_events << event %>
+          <% @events.each do |event| %>
+            <% if event.end_time < Time.now %>
+              <% past_events << event %>
+            <% elsif event.start_time < Time.now %>
+              <% live_events << event %>
+            <% else %>
+              <% upcoming_events << event %>
+            <% end %>
           <% end %>
-        <% end %>
 
-        <h2 class = "miniheader">Live Events</h2>
-        <% live_events.each do |event| %>
-          <div class="row">
-            <div class="col-md-12">
-              <%= render event %>
-              <p>
-                <%= link_to "Show this event", event %>
-                <% if event.end_time >= Time.now %>
-                  <%= link_to "Attend", attend_event_path(event) %>
-                <% end %>
-                <% if event.attendanceVisible %>
-                  <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
-                <% end %>
-              </p>
+          <h2 class = "miniheader">Live Events</h2>
+          <% live_events.each do |event| %>
+            <div class="row">
+              <div class="col-md-12">
+                <%= render event %>
+                <p>
+                  <%= link_to "Show this event", event %>
+                  <% if event.end_time >= Time.now %>
+                    <%= link_to "Attend", attend_event_path(event) %>
+                  <% end %>
+                  <% if event.attendanceVisible || (current_member&.position != 'Member' && current_member&.position != 'Pending') %>
+                    <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
+                  <% end %>
+                </p>
+              </div>
             </div>
-          </div>
-        <% end %>
+          <% end %>
 
-        <hr class="pretty-divider">
+          <hr class="pretty-divider">
 
-        <h2 class = "miniheader1">Upcoming Events</h2>
-        <% upcoming_events.each do |event| %>
-          <div class="row">
-            <div class="col-md-12">
-              <%= render event %>
-              <p>
-                <%= link_to "Show this event", event %>
-                <%= link_to "Attend", attend_event_path(event) %>
-                <% if event.attendanceVisible %>
-                  <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
-                <% end %>
-              </p>
+          <h2 class = "miniheader1">Upcoming Events</h2>
+          <% upcoming_events.each do |event| %>
+            <div class="row">
+              <div class="col-md-12">
+                <%= render event %>
+                <p>
+                  <%= link_to "Show this event", event %>
+                  <% if event.attendanceVisible || (current_member&.position != 'Member' && current_member&.position != 'Pending') %>
+                    <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
+                  <% end %>
+                </p>
+              </div>
             </div>
-          </div>
-        <% end %>
+          <% end %>
 
-        <hr class="pretty-divider">
-
-        <h2 class = "miniheader">Past Events</h2>
-        <% past_events.each do |event| %>
-          <div class="row">
-            <div class="col-md-12">
-              <%= render event %>
-              <p>
-                <% if event.attendanceVisible %>
-                  <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
-                <% end %>
-              </p>
-            </div>
-          </div>
-        <% end %>
+          <hr class="pretty-divider">
+          
+          <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+            <h2 class = "miniheader">Past Events</h2>
+            <% past_events.each do |event| %>
+              <div class="row">
+                <div class="col-md-12">
+                  <%= render event %>
+                  <p>
+                    <% if event.attendanceVisible || (current_member&.position != 'Member' && current_member&.position != 'Pending') %>
+                      <%= link_to "View Attendees", peopleAttending_event_path(event), class: 'btn btn-info' %>
+                    <% end %>
+                  </p>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
       </div>
+    </div>
+
+  <div class="floating-button">
+    <div class = "newFinance">
+      <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
+        <%= link_to new_event_path do %>
+          <button type="button">+</button>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
-<div class="floating-button">
-  <div class = "newFinance">
-    <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
-      <%= link_to new_event_path do %>
-        <button type="button">+</button>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+  <%= link_to root_path do %>
+    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <% end %>
 
-<h1 class="side-header">IMSA</h1>
-<%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
-<% if current_member&.position != 'Pending' %>
-  <a href="<%= profile_path %>">
-    <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
-  </a>
-<% end %>
+  <% if current_member&.position != 'Pending' %>
+    <a href="<%= profile_path %>">
+      <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
+    </a>
+  <% end %>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    var adminLinks = document.querySelector('.links');
-    var userLinks = document.querySelector('.user-links');
-    var adminInfo = document.querySelector('.admin-info');
-    var toggleButtons = document.querySelectorAll('.toggle-links-button');
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var adminLinks = document.querySelector('.links');
+      var userLinks = document.querySelector('.user-links');
+      var adminInfo = document.querySelector('.admin-info');
+      var toggleButtons = document.querySelectorAll('.toggle-links-button');
 
-    toggleButtons.forEach(function(button) {
-      button.addEventListener('click', function() {
-        console.log(adminInfo.style.display); 
-        adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
-        if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
-          adminInfo.style.display = 'block'; 
-        } else {
-          adminInfo.style.display = "none"; 
-        }
+      toggleButtons.forEach(function(button) {
+        button.addEventListener('click', function() {
+          console.log(adminInfo.style.display); 
+          adminLinks.style.display = adminLinks.style.display === 'none' ? 'block' : 'none';
+          if(adminInfo.style.display == 'none' || adminInfo.style.display == ''){
+            adminInfo.style.display = 'block'; 
+          } else {
+            adminInfo.style.display = "none"; 
+          }
+        });
       });
     });
-  });
-</script>
+  </script>
 
 </body>
 </html>
