--- a/app/views/finances/index.html.erb
+++ b/app/views/finances/index.html.erb
@@ -3,27 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Finance Requests</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 50px;
     }
 
     h3 {
       color: #333;
-      font-size: 25px;
+      font-size: 5vw;
     }
 
     h2 {
       color: #333;
-      margin-top: 30px;
+      margin-top: 1%;
       left: 41.25%;
+      font-size: 2vw;
     }
 
-    h1.title {
+    h1 {
       margin-top: 1%;
       font-size: 3vw;
     }
@@ -51,7 +53,6 @@
     a {
       color: #007bff;
       text-decoration: none;
-      margin: 5px;
     }
 
     .admin-links,
@@ -102,6 +103,19 @@
       color: #fff;
     }
 
+    .header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #007bff;
+      padding: 5px; 
+      color: #fff;
+    }
+
+    .content {
+      margin-top: 60px; 
+    }
+
     .navbar .active a {
       background-color: #C0C0C0; 
       color: #007bff; 
@@ -119,18 +133,6 @@
     }
     @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
 
-
-    .imsa-header {
-      transform: rotate(270deg);
-      position: fixed;
-      top: 75%; 
-      left: 11%; 
-      transform-origin: bottom left; 
-      letter-spacing: 0.8em; 
-      font-size: 6vw; 
-      font-family: 'Mustopha'; 
-    }
-
     .floating-button {
       position: fixed;
       bottom: 10%;
@@ -146,7 +148,7 @@
       color: #333;
       border: 2px solid #ccc;
       border-radius: 20px;
-      font-size: 2.5vw;
+      font-size: 5vh;
       cursor: pointer;
       height: 10vh;
       width: 5vw;
@@ -174,7 +176,7 @@
       border: 2px solid #ccc;
       border-radius: 5px;
       padding: 10px;
-      max-width: 50vw;
+      max-width: 500px;
       margin: auto;
       background-color: #f9f9f9;
       margin-bottom: 10px;
@@ -184,7 +186,7 @@
       border: 2px solid #ccc;
       border-radius: 5px;
       padding: 10px;
-      max-width: 50vw;
+      max-width: 500px;
       margin: auto;
       background-color: #f9f9f9;
       margin-bottom: 10px;
@@ -194,7 +196,7 @@
       border: none;
       height: 2px;
       background-color: #ccc;
-      width: 30%;
+      width: 80%;
     }
 
     .red-dot {
@@ -209,10 +211,42 @@
       font-size: 1vw;
     }
 
+    .delete-confirmation-popup {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      border: 1px solid black;
+      z-index: 1000;
+    }
+
+
+    .confirm-delete-btn, .cancel-delete-btn {
+      margin-right: 5px;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 3px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    .confirm-delete-btn {
+      background-color: #d9534f; /* Red */
+      color: white;
+    }
+
+    .cancel-delete-btn {
+      background-color: #f0ad4e; /* Yellow */
+      color: white;
+    }
   </style>
 </head>
-
 <body>
+
 <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
   <% if Finance.where(status: 0).count >= 1 %>
       <div class="red-dot"><%= Finance.where(status: 0).count %>!</div>
@@ -223,12 +257,12 @@
   <% current_member = Member.find_by(email: current_admin.email) %>
 
   <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-    <h1 class = "title">Finance Requests</h1>
+    <h1>Finance Requests</h1>
     
     <div class="links">
       <div class="admin-links">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
+
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -258,7 +292,7 @@
     
     <div class="finances">
       <% if current_member&.position == 'President' || current_member&.position == 'Finance Chair' %>
-        <h3> Denied </h3>
+        <h2> Denied </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Denied' %>
@@ -269,19 +303,21 @@
                     <p>
                       <div style="display: flex;">
                         <%= link_to finance do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
                         <%= link_to edit_finance_path(finance) do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
-                        <%= button_to finance, method: :delete, style: "width: 30%;" do %>
-                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        <%= button_to finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" do %>
+                          <button type="button" onclick="confirmFinanceDelete()" style="width: 33.3%; height: auto;">
+                            <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                          </button>
                         <% end %>
                       </div>
                     </p>
@@ -293,7 +329,7 @@
         <% end %>
         
         <hr class="pretty-divider">
-        <h3> Pending </h3>
+        <h2> Pending </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Pending' %>
@@ -303,19 +339,21 @@
                   <p>
                     <div style="display: flex;">
                       <%= link_to finance do %>
-                        <button type="button" style= "width: 20%;">
+                        <button type="button" style= "width: 33.3%;">
                           <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                         </button>
                       <% end %>
+
                       <%= link_to edit_finance_path(finance) do %>
-                        <button type="button" style= "width: 20%;">
+                        <button type="button" style= "width: 33.3%;">
                           <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
                         </button>
                       <% end %>
-                      <% if finance.email == current_member&.email %>
-                        <%= button_to finance, method: :delete, style: "width: 20%;" do %>
+
+                      <%= button_to finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" do %>
+                        <button type="button" onclick="confirmFinanceDelete()" style="width: 33.3%; height: auto;">
                           <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
-                        <% end %>
+                        </button>
                       <% end %>
                     </div>
                   </p>
@@ -326,7 +364,7 @@
         <% end %>
 
         <hr class="pretty-divider">
-        <h3> Completed </h3>
+        <h2> Completed </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Approved' %>
@@ -336,12 +374,15 @@
                   <p>
                     <div style="display: flex;">
                       <%= link_to finance do %>
-                        <button type="button" style= "width: 20%;">
+                        <button type="button" style= "width: 33.3%;">
                           <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                         </button>
                       <% end %>
-                      <%= button_to finance, method: :delete, style: "width: 20%;" do %>
-                        <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+
+                      <%= button_to finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" do %>
+                        <button type="button" onclick="confirmFinanceDelete()" style="width: 33.3%; height: auto;">
+                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        </button>
                       <% end %>
                     </div>
                   </p>
@@ -355,14 +396,14 @@
           <div class = "newFinance">
             <% if @current_member&.position != 'Member' && @current_member&.position != 'Pending' %>
               <%= link_to new_finance_path do %>
-                <button type="button">+</button>
+                <button type="buottn">+</button>
               <% end %>
             <% end %>
           </div>
         </div>
 
       <% elsif current_member&.position != 'President' && current_member&.position != 'Finance Chair' && current_member&.position != 'Member' && current_member&.position != 'Pending' %>
-        <h3> Denied </h3>
+        <h2> Denied </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Denied' %>
@@ -373,19 +414,21 @@
                     <p>
                       <div style="display: flex;">
                         <%= link_to finance do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
                         <%= link_to edit_finance_path(finance) do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
-                        <%= button_to finance, method: :delete, style: "width: 30%;" do %>
-                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        <%= button_to finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" do %>
+                          <button type="button" onclick="confirmFinanceDelete()" style="width: 33.3%; height: auto;">
+                            <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                          </button>
                         <% end %>
                       </div>
                     </p>
@@ -397,7 +440,7 @@
         <% end %>
 
         <hr class="pretty-divider">
-        <h3> Pending </h3>
+        <h2> Pending </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Pending' %>
@@ -408,19 +451,21 @@
                     <p>
                       <div style="display: flex;">
                         <%= link_to finance do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
                         <%= link_to edit_finance_path(finance) do %>
-                          <button type="button" style="width: 30%;">
+                          <button type="button" style="width: 33.3%;">
                             <%= image_tag "edit_icon.png", alt: "Edit Finance", style: "width: 100%; height: auto;" %>
                           </button>
                         <% end %>
                       
-                        <%= button_to finance, method: :delete, style: "width: 30%;" do %>
-                          <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                        <%= button_to finance, method: :delete, class: "destroy-finance-form", form_class: "finance-delete-form", style: "display: none;" do %>
+                          <button type="button" onclick="confirmFinanceDelete()" style="width: 33.3%; height: auto;">
+                            <%= image_tag "delete_icon.png", alt: "Delete Finance", style: "width: 100%; height: auto;" %>
+                          </button>
                         <% end %>
                       </div>
                     </p>
@@ -432,7 +477,7 @@
         <% end %>
 
         <hr class="pretty-divider">
-        <h3> Completed </h3>
+        <h2> Completed </h2>
         <% @finances.each do |finance| %>
           <div class = "finance">
             <% if finance.status == 'Approved' %>
@@ -442,7 +487,7 @@
                   <div class="showFinance">
                     <p>
                       <%= link_to finance do %>
-                        <button type="button" style= "width: 10%;">
+                        <button type="button" style= "width: 33.3%;">
                           <%= image_tag "view_icon.png", alt: "Show Finance", style: "width: 100%; height: auto;" %>
                         </button>
                       <% end %>
@@ -466,8 +511,10 @@
       <% end %>
     </div> 
   
-    <h1 class="imsa-header">IMSA</h1>
-    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-icon' %>
+    <%= link_to root_path do %>
+      <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-icon' %>
+    <% end %>
+
     <% if current_member&.position != 'Pending' %>
       <a href="<%= profile_path %>">
         <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile' %>
@@ -477,3 +524,42 @@
   <% end %>
 <% end %>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Confirmation Popup -->
+<div id="deleteConfirmationPopup" class="delete-confirmation-popup" style="display: none;">
+  <p id="deleteConfirmationMessage">Are you sure you want to delete this finance record?</p>
+  <button id="confirmDeleteBtn" class="confirm-delete-btn">Delete</button>
+  <button onclick="cancelDelete()" class="cancel-delete-btn">Cancel</button>
+</div>
+
+<script>
+  function confirmFinanceDelete() {
+    document.getElementById('deleteConfirmationPopup').style.display = 'block';
+  }
+
+  document.addEventListener("DOMContentLoaded", function() {
+    var confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
+    var destroyForm = document.querySelector('.finance-delete-form');
+
+    confirmDeleteBtn.addEventListener('click', function() {
+      try {
+        if (destroyForm) {
+          console.log(destroyForm);
+          destroyForm.submit();
+        } else {
+          console.error('Delete form not found');
+        }
+      } catch (error) {
+        console.error('Error submitting delete form:', error);
+      }
+    });
+  });
+
+  function cancelDelete() {
+    document.getElementById('deleteConfirmationPopup').style.display = 'none';
+  }
+</script>
