--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,6 +1,46 @@
-<h1>Editing member</h1>
+<header>
+  <title>Edit Member</title>
+</header>
 
-<h3><%= render "form", member: @member %></h3> 
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 50px;
+  }
+
+  h3 {
+    color: #333;
+    font-size: 5vw;
+  }
+
+  h2 {
+    color: #333;
+    margin-top: 1%;
+    left: 41.25%;
+    font-size: 2vw;
+  }
+
+  h1 {
+    margin-top: 1%;
+    font-size: 3vw;
+    text-align: center;
+  }
+
+  p {
+    color: #666;
+  }
+
+  a {
+    color: #007bff;
+    text-decoration: none;
+    margin: 5px;
+  }
+</style>
+
+<h1>Editing Member</h1>
+
+<%= render "form", member: @member %>
 
 <div class="links">
   <%= link_to "Show this member", @member %> |
