--- a/app/views/members/officer_index.html.erb
+++ b/app/views/members/officer_index.html.erb
@@ -1,28 +1,10 @@
 <!-- app/views/members/index.html.erb -->
 <!DOCTYPE html>
 <html lang="en">
-
-<style>
-  .link-like-button {
-    background: none !important;
-    border: none;
-    padding: 0 !important;
-    font-family: arial, sans-serif;
-    color: #069;
-    text-decoration: underline;
-    cursor: pointer;
-  }
-
-  .link-like-button:hover {
-    color: #00C;
-    text-decoration: underline;
-  }
-</style>
-
-<head>
+<header>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Officer Leaderboard</title>
+  <title>Officers</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.cdnfonts.com/css/mustopha" rel="stylesheet">
   <style>
@@ -64,8 +46,12 @@
       cursor: pointer;
     }
 
+    h2 {
+      color: #333;
+    }
+
     p {
-      color: #666;
+      color: #666;åå
     }
 
     a {
@@ -110,37 +96,24 @@
       color: #fff;
     }
 
+    .content {
+      margin-top: 60px; 
+    }
+
     .navbar {
       background-color: #007bff;
       padding: 5px;
       width: 55%;
       margin: auto; 
       margin-top: 5vh;
+      display: flex;
+      align-items: center; 
+      justify-content: space-evenly;
+      z-index: 1000;
     }
 
     .navbar a {
       color: #fff;
-    }
-
-    .header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #007bff;
-      padding: 5px; 
-      color: #fff;
-    }
-
-    .miniheader{
-      margin-left: -60%; 
-    }
-
-    .miniheader1{
-      margin-left: -53%; 
-    }
-
-    .content {
-      margin-top: 60px; 
     }
 
     .navbar .active a {
@@ -159,18 +132,6 @@
       width: 30%;
     }
     @import url('https://fonts.googleapis.com/css2?family=Lateef&display=swap');
-
-
-    .side-header {
-      transform: rotate(270deg);
-      position: fixed;
-      top: 75%; 
-      left: 11%; 
-      transform-origin: bottom left; 
-      letter-spacing: 0.8em; 
-      font-size: 6vw; 
-      font-family: 'Mustopha'; 
-    }
 
     table, thead, tbody, tr, td {
       font-family: Arial, sans-serif;
@@ -210,10 +171,22 @@
       font-size: 1vw;
     }
 
-  </style>
-</head>
+    .link-like-button {
+      background: none !important;
+      border: none;
+      padding: 0 !important;
+      font-family: arial, sans-serif;
+      color: #069;
+      text-decoration: underline;
+      cursor: pointer;
+    }
 
-<body>
+    .link-like-button:hover {
+      color: #00C;
+      text-decoration: underline;
+    }
+  </style>
+</header>
 
 <% if current_member&.position != 'Member' && current_member&.position != 'Pending' %>
   <% if Finance.where(status: 0).count > 0 %>
@@ -221,56 +194,66 @@
   <% end %>
 <% end %> 
 
-  <% if admin_signed_in? %>
-    <% current_member = Member.find_by(email: current_admin.email) %>
-    <h1 class = "title">Officers</h1>
-    <% if current_member&.position == 'President' %>
-      <div class="admin-links">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Members', members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item active">
-                <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Events', events_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Finances', finances_path, class: 'nav-link' %>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    <% elsif current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+<% if admin_signed_in? %>
+  <% current_member = Member.find_by(email: current_admin.email) %>
+  <h1 class = "title">Officers</h1>
+  <% if current_member&.position == 'President' %>
     <div class="admin-links">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
+              <%= link_to 'Members', members_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item active">
+              <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
+              <%= link_to 'Events', events_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
+              <%= link_to 'Finances', finances_path, class: 'nav-link' %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  <% elsif current_member&.position != 'Member' && current_member&.position != 'Pending' %>
+    <div class="admin-links">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
             <%= link_to 'Dashboard', root_path, class: 'nav-link' %>
             </li>
+
             <li class="nav-item">
               <%= link_to 'Members', members_path, class: 'nav-link' %>
             </li>
+
             <li class="nav-item active">
               <%= link_to 'Officers', officer_index_members_path, class: 'nav-link' %>
             </li>
+
             <li class="nav-item">
               <%= link_to 'Events', events_path, class: 'nav-link' %>
             </li>
+            
             <li class="nav-item">
               <%= link_to 'Finances', finances_path, class: 'nav-link' %>
             </li>
@@ -280,8 +263,10 @@
     <% end %>
   <% end %>
 
-  <h1 class="side-header">IMSA</h1>
-  <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <%= link_to root_path do %>
+    <%= image_tag 'imsa_logo.JPEG', alt: 'IMSA Logo', class: 'imsa-logo' %>
+  <% end %>
+
   <% if current_member&.position != 'Pending' %>
     <a href="<%= profile_path %>">
       <%= image_tag 'profile_icon.png', alt: 'Profile Icon', class: 'profile-icon' %>
