--- a/app/views/officer_entries/new.html.erb
+++ b/app/views/officer_entries/new.html.erb
@@ -9,5 +9,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to officer entries", officer_entries_path %>
+  <%= link_to "Back to officer leaderboard", officer_index_members_path %>
 </div>
